k8s/deployments/sciviz/public/sci-viz/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sci-viz
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
      #    cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: sciviz-public.internationalbrainlab.org
    http:
      paths:
      - path: /
        backend:
          serviceName: sci-viz
          servicePort: http
  tls:
    - hosts:
      - sciviz-public.internationalbrainlab.org
      secretName: sci-viz-tls
...
